--- a/scripts/postinst.in
+++ b/scripts/postinst.in
@@ -14,7 +14,7 @@ chmod 755 -R @TERRAMA2_DESTINATION@
 
 chown 1000:1000 -R @TERRAMA2_DESTINATION@
 
-chown -R 1000:1000 /home/$USER/.${INSTALL_COMMAND}
+chown -R 1000:1000 /home/$(id -nu 1000)/.${INSTALL_COMMAND}
 
 printf "Post-installation script...\n"
 
