--- a/scripts/postinst.in
+++ b/scripts/postinst.in
@@ -14,7 +14,10 @@ chmod 755 -R @TERRAMA2_DESTINATION@
 
 chown 1000:1000 -R @TERRAMA2_DESTINATION@
 
+mkdir -p 755 /home/$(id -nu 1000)/.${INSTALL_COMMAND}
+
 chown -R 1000:1000 /home/$(id -nu 1000)/.${INSTALL_COMMAND}
+
 
 printf "Post-installation script...\n"
 
@@ -91,6 +94,42 @@ printf "Post-installation script...\n"
   if ! [ -d "instances" ]; then
     cp -r sample_instances instances
   fi
+)
+
+# Check if pm2 is already installed
+npm list pm2 -g
+if [ $? != 0 ]; then
+  printf "Configuring pm2...\n"
+  # Install pm2
+  npm install pm2 -g
+  valid $? "Error installing pm2."
+  pm2 install pm2-logrotate
+  valid $? "Error installing pm2-logrotate."
+  # Allows the service to start with the system
+  env PATH=$PATH:/usr/local/bin pm2 startup
+  valid $? "Error adding pm2 to startup."
+fi
+
+# Add webapp to pm2 startup
+(
+  cd @TERRAMA2_DESTINATION@webapp
+  pm2 delete webapp
+
+  pm2 start npm --name webapp -- start
+  valid $? "Error executing webapp."
+  pm2 save
+  valid $? "Error saving pm2 state."
+)
+
+# Add webmonitor to pm2 startup
+(
+  cd @TERRAMA2_DESTINATION@webmonitor
+  pm2 delete webmonitor
+
+  pm2 start npm --name webmonitor -- start
+  valid $? "Error executing webmonitor."
+  pm2 save
+  valid $? "Error saving pm2 state."
 )
 
 printf "End post-installation script...\n\n"
