--- a/scripts/postinst.in
+++ b/scripts/postinst.in
@@ -12,11 +12,11 @@ function valid()
 
 chmod 755 -R @TERRAMA2_DESTINATION@
 
-chown 1000:1000 -R @TERRAMA2_DESTINATION@
+# chown 1000:1000 -R @TERRAMA2_DESTINATION@
 
-mkdir -p 755 /home/$(id -nu 1000)/.${INSTALL_COMMAND}
+# mkdir -p 755 /home/$(id -nu 1000)/.${INSTALL_COMMAND}
 
-chown -R 1000:1000 /home/$(id -nu 1000)/.${INSTALL_COMMAND}
+# chown -R 1000:1000 /home/$(id -nu 1000)/.${INSTALL_COMMAND}
 
 
 printf "Post-installation script...\n"
