--- a/scripts/postinst.in
+++ b/scripts/postinst.in
@@ -10,9 +10,12 @@ function valid()
   fi
 }
 
+chmod 755 -R @TERRAMA2_DESTINATION@
+chown $USER:$USER -R @TERRAMA2_DESTINATION@
+
 printf "Post-installation script...\n"
 
-# ${INSTALL_COMMAND} install yarn -g
+# npm install yarn -g
 # valid $? "Unable to install Yarn."
 
 (
@@ -28,7 +31,7 @@ printf "Post-installation script...\n"
   ${INSTALL_COMMAND} install
   valid $? "Unable to install NodeJs dependencies."
 
-  ${INSTALL_COMMAND} run grunt
+  npm run grunt
   valid $? "Error executing grunt.\n"
 
   chmod +x bin/webapp-stop.js
@@ -44,7 +47,7 @@ printf "Post-installation script...\n"
 
   ${INSTALL_COMMAND} install
   valid $? "Unable to install NodeJs dependencies."
-  ${INSTALL_COMMAND} run grunt
+  npm run grunt
   valid $? "Error executing grunt."
 )
 
@@ -61,7 +64,7 @@ printf "Post-installation script...\n"
   ${INSTALL_COMMAND} install
   valid $? "Unable to install NodeJs dependencies."
 
-  ${INSTALL_COMMAND} run grunt
+  npm run grunt
   valid $? "Error executing grunt."
 )
 
@@ -85,42 +88,6 @@ printf "Post-installation script...\n"
   if ! [ -d "instances" ]; then
     cp -r sample_instances instances
   fi
-)
-
-# Check if pm2 is already installed
-npm list pm2 -g
-if [ $? != 0 ]; then
-  printf "Configuring pm2...\n"
-  # Install pm2
-  npm install pm2 -g
-  valid $? "Error installing pm2."
-  pm2 install pm2-logrotate
-  valid $? "Error installing pm2-logrotate."
-  # Allows the service to start with the system
-  env PATH=$PATH:/usr/local/bin pm2 startup
-  valid $? "Error adding pm2 to startup."
-fi
-
-# Add webapp to pm2 startup
-(
-  cd @TERRAMA2_DESTINATION@webapp
-  pm2 delete webapp
-
-  pm2 start npm --name webapp -- start
-  valid $? "Error executing webapp."
-  pm2 save
-  valid $? "Error saving pm2 state."
-)
-
-# Add webmonitor to pm2 startup
-(
-  cd @TERRAMA2_DESTINATION@webmonitor
-  pm2 delete webmonitor
-
-  pm2 start npm --name webmonitor -- start
-  valid $? "Error executing webmonitor."
-  pm2 save
-  valid $? "Error saving pm2 state."
 )
 
 printf "End post-installation script...\n\n"
