Added geoserver host and port configuration to the settings.json

--- a/webapp/config/settings.json.example
+++ b/webapp/config/settings.json.example
@@ -1,5 +1,7 @@
 {
   "basePath": "/",
+  "geoserverHost": "localhost",
+  "geoserverPort": 8080,
   "port": 36000,
   "defaultFilePathList": [
     "/home/<USER>/terrama2"
