Added geoserver base path on the settings.json

--- a/webapp/config/settings.json.example
+++ b/webapp/config/settings.json.example
@@ -1,6 +1,7 @@
 {
   "basePath": "/",
   "geoserverHost": "localhost",
+  "geoserverBasePath": "/geoserver",
   "geoserverPort": 8080,
   "port": 36000,
   "defaultFilePathList": [
