--- a/scripts/postinst.in
+++ b/scripts/postinst.in
@@ -36,6 +36,15 @@ printf "Post-installation script...\n"
 
   chmod +x bin/webapp-stop.js
   chmod 755 bin/webapp-stop.js
+
+  #
+  # Create default config files
+  #
+
+  cd @TERRAMA2_DESTINATION@webapp/config
+  if ! [ -f "settings.json" ]; then
+    cp -a settings.json.example settings.json
+  fi
 )
 
 (
@@ -49,6 +58,15 @@ printf "Post-installation script...\n"
   valid $? "Unable to install NodeJs dependencies."
   npm run grunt
   valid $? "Error executing grunt."
+
+  #
+  # Create default config files
+  #
+
+  cd @TERRAMA2_DESTINATION@webapp/config
+  if ! [ -f "db.json" ]; then
+    cp -a db.json.example db.json
+  fi
 )
 
 (
@@ -66,27 +84,14 @@ printf "Post-installation script...\n"
 
   npm run grunt
   valid $? "Error executing grunt."
-)
 
-#
-# Create default config files
-#
-(
-  cd @TERRAMA2_DESTINATION@webapp/config
-  if ! [ -f "settings.json" ]; then
-    cp settings.json.example settings.json
-  fi
-)
-(
-  cd @TERRAMA2_DESTINATION@webapp/config
-  if ! [ -f "db.json" ]; then
-    cp db.json.example db.json
-  fi
-)
-(
+  #
+  # Create default config files
+  #
+
   cd @TERRAMA2_DESTINATION@webmonitor/config
   if ! [ -d "instances" ]; then
-    cp -r sample_instances instances
+    cp -a sample_instances instances
   fi
 )
 
