--- a/scripts/preinst-final.in
+++ b/scripts/preinst-final.in
@@ -11,7 +11,7 @@ echo "deb http://apt.postgresql.org/pub/repos/apt/ xenial-pgdg main" > /etc/apt/
 wget -qO- https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
 
 apt-get update
-apt-get install -y cmake git libquazip-dev unzip screen openssh-server doxygen supervisor locales nodejs libgsasl7 postgresql-11-postgis-2.5 postgis postgresql-server-dev-11 nodejs python-psycopg2
+apt-get install -y cmake git libquazip-dev unzip screen openssh-server doxygen supervisor locales libgsasl7 postgresql-11-postgis-2.5 postgis postgresql-server-dev-11 nodejs python-psycopg2
 mkdir $HOME/.ssh
 ssh-keygen -t rsa -b 4096 -C "terrama2-team@dpi.inpe.br" -N "" -f $HOME/.ssh/id_rsa
 
