--- a/scripts/postinst-final.in
+++ b/scripts/postinst-final.in
@@ -17,6 +17,8 @@ mkdir @TERRAMA2_DESTINATION@/webmonitor/node_modules
 chmod 755 -R @TERRAMA2_DESTINATION@
 chown 1000:1000 -R @TERRAMA2_DESTINATION@
 
+sudo -u postgres psql -c "ALTER USER postgres WITH PASSWORD 'postgres'"
+
 printf "Post-installation script...\n"
 
 # npm install yarn -g
@@ -93,13 +95,13 @@ printf "Post-installation script...\n"
 )
 
 # Check if pm2 is already installed
-sudo -u $(id -gn 1000) npm list pm2 -g
+npm list pm2 -g
 if [ $? != 0 ]; then
   printf "Configuring pm2...\n"
   # Install pm2
-  sudo -u $(id -gn 1000) npm install pm2 -g
+  npm install pm2 -g
   valid $? "Error installing pm2."
-  pm2 install pm2-logrotate
+  sudo -u $(id -gn 1000) pm2 install pm2-logrotate
   valid $? "Error installing pm2-logrotate."
   # Allows the service to start with the system
   env PATH=$PATH:/usr/local/bin pm2 startup
@@ -109,22 +111,22 @@ fi
 # Add webapp to pm2 startup
 (
   cd @TERRAMA2_DESTINATION@webapp
-  pm2 delete webapp
+  sudo -u $(id -gn 1000) pm2 delete webapp
 
-  pm2 start npm --name webapp -- start
+  sudo -u $(id -gn 1000) pm2 start npm --name webapp -- start
   valid $? "Error executing webapp."
-  pm2 save
+  sudo -u $(id -gn 1000) pm2 save
   valid $? "Error saving pm2 state."
 )
 
 # Add webmonitor to pm2 startup
 (
   cd @TERRAMA2_DESTINATION@webmonitor
-  pm2 delete webmonitor
+  sudo -u $(id -gn 1000) pm2 delete webmonitor
 
-  pm2 start npm --name webmonitor -- start
+  sudo -u $(id -gn 1000) pm2 start npm --name webmonitor -- start
   valid $? "Error executing webmonitor."
-  pm2 save
+  sudo -u $(id -gn 1000) pm2 save
   valid $? "Error saving pm2 state."
 )
 
