Fixed error on postinst pm2 commands

--- a/scripts/postinst-final.in
+++ b/scripts/postinst-final.in
@@ -116,7 +116,7 @@ fi
 
   pm2 start npm --name webapp -- start
   valid $? "Error executing webapp."
-  save
+  pm2 save
   valid $? "Error saving pm2 state."
 )
 
