--- a/scripts/postinst.in
+++ b/scripts/postinst.in
@@ -11,7 +11,7 @@ function valid()
 }
 
 chmod 755 -R @TERRAMA2_DESTINATION@
-chown $USER:$USER -R @TERRAMA2_DESTINATION@
+chown terrama2:terrama2 -R @TERRAMA2_DESTINATION@
 
 printf "Post-installation script...\n"
 
