--- a/webapp/package.json
+++ b/webapp/package.json
@@ -29,7 +29,6 @@
     "angular": "=1.6.5",
     "angular-animate": "=1.6.6",
     "angular-aria": "=1.6.6",
-    "angular-bootstrap-scrolling-tabs": "^1.2.0",
     "angular-eonasdan-datetimepicker": "=0.3.9",
     "angular-material": "=1.1.4",
     "angular-sanitize": "=1.6.5",
@@ -43,7 +42,7 @@
     "angularjs-dropdown-multiselect": "^2.0.0-beta.10",
     "async": "^2.0.0-rc.6",
     "basic-ftp": "^3.4.4",
-    "bcrypt": "^3.0.4",
+    "bcrypt": "3.0.4",
     "bluebird": "^3.3.4",
     "body-parser": "~1.13.2",
     "chart.js": "=2.6.0",
