--- a/webmonitor/package.json
+++ b/webmonitor/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "start2": "NODE_ENV=PRODUCTION NODE_TLS_REJECT_UNAUTHORIZED=0 node ./bin/www",
     "grunt": "grunt"
   },
   "dependencies": {
