Changed version from 4.1.1 to develop on config scripts

--- a/webapp/config/settings.json.example
+++ b/webapp/config/settings.json.example
@@ -7,7 +7,7 @@
   "defaultFilePathList": [
     "/home/<USER>/terrama2"
   ],
-  "defaultExecutablePath": "/opt/terrama2/4.1.1/bin",
+  "defaultExecutablePath": "/opt/terrama2/develop/bin",
   "defaultExecutableName": "terrama2_service",
   "disablePDF": true,
   "debug": true,
