--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "terrama2-webapp",
-  "version": "4.1.2-develop",
+  "version": "b4.1.2-dev",
   "private": true,
   "scripts": {
     "start": "NODE_ENV=PRODUCTION node ./bin/www",
